# astroPT

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CONTRIBUTING.md  README.md  affine_run.job  aim_run.job  jetformer_run.job  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
astroPT/: model.py  sample.py  train.py
config/: 20260514_vis_only_test.yaml  20260516_HybridTraining.yaml  20260519_Hibyd_filtered.yaml  20260528_Hibyd_fiber.yaml  20260531_Hybrid_Optimized.yaml  20260605_OriginalConfig.yaml  20260607_Filter_Unimodal_Spectra.yaml  20260608_Filter_Unimodal_Images.yaml  astropt005M.py  astropt010M.py  astropt070M.py  astropt2100M.py  astropt300M.py  astropt300m.py  astropt700M.py  astropt_mae.py  best_config_for_probing.yaml  default_config.yaml  test_hybrid_model.yaml
config/2405.14930/: astropt001M.py
config/entpatch/: astropt070M.py
config/llm/: qwen3-14B.py  smollm-135M.py  smollm-1700M.py  smollm-3000M-hydra.py  smollm-3000M.py  smollm-360M.py  smollm.py
config/pythia-like/: README.md  ar_affine_001M.py  ar_affine_021M.py  ar_affine_100M.py  ar_aim_001M.py  ar_aim_021M.py  ar_aim_100M.py  mae_affine_001M.py  mae_affine_021M.py  mae_affine_100M.py  mae_aim_001M.py  mae_aim_021M.py  mae_aim_100M.py
config/scaling/: astropt001M.py  astropt005M.py  astropt010M.py  astropt020M.py  astropt070M.py  astropt2100M.py  astropt300M.py  astropt700M.py
config/sparsity/: astropt070M.py
config/study/: README.md  ar_affine_001M.py  ar_affine_021M.py  ar_affine_100M.py  ar_aim_001M.py  ar_aim_021M.py  ar_aim_100M.py  mae_affine_001M.py  mae_affine_021M.py  mae_affine_100M.py  mae_aim_001M.py  mae_aim_021M.py  mae_aim_100M.py
data/: README.md  get_desi.bash  hf_upload_script_example.py  parallel_desi.bash  prepare_data.py  resize_galaxies.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: aion_tokeniser.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  quickstart.rst  walkthrough.rst
explore/: loss_700M.txt  scaling_prelim.ipynb
scripts/: MLP_downstream_tasks.py  README.md  anomalies_analysis.py  arrow_dataset_filter.py  attention_maps.py  calculate_normalization.py  cosine_similarity.py  cosine_similarity_checkpoint.py  cross_reconstruction.py  eval.py  extract_embeddings.py  extract_embeddings_astroclip.py  extract_resnet_embeddings.py  finetune.py  linear_probe.py  linear_probe_llm.py  linear_probe_llm_temp.py  pickle_to_arrow.py  plot_images_spectra.py  plot_training_metrics.py  plot_umaps.py  plot_umaps_morphological.py  pretokenise_dataset_arrow.py  probing_downstream.py  probing_downstream_dashboard.py  probing_latent_dashboard.py  probing_latent_mapper.py  probing_predictions_dashboard.py  retrain_unet_adapter.py  token_distribution_analysis.py  train.py  train_aion.py  train_astroclip_arrow.py  train_from_llm.py  train_jetformer.py  train_mae.py  train_multimodal.py  train_multimodal_arrow.py  train_resnet_adapter.py  train_resnet_supervised.py  (+10 more)
scripts/baselines/: train_supervised_baseline_images.py  train_supervised_baseline_spectra.py
scripts/colm_2026/: README.md  bootstrap_ci.py  causal_tracing.py  kfold_reprobe.py  plot_causal.py  plot_geometry.py  plot_grokking.py  plot_residual_scaling.py  plot_scaling.py  plot_with_ci.py  reprobe_residual.py
scripts/desi/: train.py
slurm/: arrow_dataset_interpolation_pipeline.sh  attention_maps.sh  cosine_similarity.sh  cross_reconstruction.sh  delayed_launch.sh  extract_embeddings.sh  extract_embeddings_astroclip.sh  extract_resnet_embeddings.sh  extract_spectra_embeddings.sh  launch_postrain_astropt.sh  launch_testtrain_astroclip.sh  launch_testtrain_astropt.sh  launch_train_astroclip_multiGPU.sh  launch_train_astropt_multiGPU.sh  plot_images_spectra.sh  plot_training_metrics.sh  plot_umaps.sh  pretokenise_dataset.sh  probing_downstream.sh  probing_downstream_dashboard.sh  probing_latent_dashboard.sh  probing_latent_mapper.sh  probing_predictions_dashboard.sh  train_astroclip_multiGPU.sh  train_astropt_multiGPU.sh  train_resnet_adapter.sh  train_resnet_baseline.sh  train_spectra_baseline.sh  train_unet_adapter.sh  workflow_controller.sh
src/: local_datasets.py  model.py  sample.py  sample_embeddings.py  sample_embeddings_euclid.py  spectra.py  train.py
visualisations/: Source_classes.ipynb
(+173 files in other folders)
